--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -55,6 +55,7 @@
         font-family: $f-alt-gothic;
         font-size: 2em;
         text-decoration: none;
+        line-height: 1em;
 
         span {
             display: inline-block;
